--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,45 @@ body {
     max-width: 600px;
   }
 }
+
+.date-input-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.date-label {
+  font-size: 14px;
+  margin-bottom: 4px;
+  color: #6b6b6b;
+}
+
+.custom-date-input {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 8px 12px;
+  background-color: #f9f9f9;
+  color: #333;
+  cursor: pointer;
+  width: fit-content;
+}
+
+.custom-date-input:hover {
+  border-color: #aaa;
+}
+
+/* Spinner styles */
+.loader-border {
+  display: inline-block;
+  border-radius: 50%;
+}
+
+input {
+  position: relative;
+}
+
+.text-red-500 {
+  position: absolute;
+  bottom: -18px;
+  left: 0;
+  font-size: 12px;
+}
