--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,77 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.responsive-chart-container {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  aspect-ratio: 1; /* Maintain square aspect ratio */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+  .responsive-chart-container {
+    max-width: 500px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .responsive-chart-container {
+    max-width: 600px;
+  }
+}
+
+.date-input-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.date-label {
+  font-size: 14px;
+  margin-bottom: 4px;
+  color: #6b6b6b;
+}
+
+.custom-date-input {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 8px 12px;
+  background-color: #f9f9f9;
+  color: #333;
+  cursor: pointer;
+  width: fit-content;
+}
+
+.custom-date-input:hover {
+  border-color: #aaa;
+}
+
+/* Spinner styles */
+.loader-border {
+  display: inline-block;
+  border-radius: 50%;
+}
+
+input {
+  position: relative;
+}
+
+.text-red-500 {
+  position: absolute;
+  bottom: -18px;
+  left: 0;
+  font-size: 12px;
+}
